<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">All2Clouds</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="setting_name">Settings</string>
    <string name="restore">Restore</string>
    <string name="backup">Backup</string>
    <string name="overview">OverView</string>
    <string name="link_with_dropbox">Link with Dropbox</string>
    <string name="calender_events">Calendar Events</string>
    <string name="cancel">Cancel</string>
    <string name="contacts">Contacts</string>
    <string name="mms_sms">MMS SMS</string>
    <string name="user_data">User Data:</string>
    <string name="wifi_database">Wifi Database</string>
    <string name="application">Application</string>
    <string name="system">System:</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="problem">Problem</string>
    <string name="check_for_update">Update</string>
    <string name="storage_information">Storage Infomation:</string>
    <string name="inactive">Inactive</string>
    <string name="cloud_storage">Cloud storage:</string>
    <string name="disable">Disable</string>
    <string name="encryption">Encryption:</string>
    <string name="not_found">Not Found</string>
    <string name="backup_directory">Backup Directory:</string>
    <string name="not_allowed">Not Allowed</string>
    <string name="fast_auto_install">Fast/Auto app install:</string>
    <string name="denied">Denied</string>
    <string name="system_information">System Infomation:</string>
    <string name="select_package">Select package to restore:</string>
    <string name="backup_package">Backup Package:</string>
    <string name="root_access">Root Access:</string>
    <string name="about_document">about</string>
    <string name="options">Option:</string>
</resources>
