<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4">

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <!--<View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/material_blue_grey_800" />
-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/system_information"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/accent_material_light"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/accent_material_dark" />
<!--

        <Space
            android:layout_width="match_parent"
            android:layout_height="3dp" />
-->

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sysInfoListView"></ListView>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btLinkToDropbox"
            android:text="@string/link_with_dropbox"
            android:background="@color/accent_material_light"
            android:textColor="@color/secondary_text_default_material_dark"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0.5dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="0.5dp"
                android:id="@+id/bt_help"
                android:layout_weight="1"
                android:text="@string/action_help"
                android:background="@color/accent_material_light"
                android:textColor="@color/secondary_text_default_material_dark"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bt_about"
                android:layout_weight="1"
                android:text="@string/action_about"
                android:background="@color/accent_material_light"
                android:textColor="@color/secondary_text_default_material_dark"/>
            </LinearLayout>
    </LinearLayout>

</LinearLayout>