<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />
<!--
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_bright" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="20dp"
        android:textColor="@color/accent_material_light"
        android:text="@string/select_package" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/accent_material_dark" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:id="@+id/spinner_selpackage"/>

    </LinearLayout>
<!--

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />
-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="20dp"
        android:textColor="@color/accent_material_light"
        android:text="@string/options" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/accent_material_dark" />

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_bright" />
-->
    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:layout_weight="0.3"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp">

        <LinearLayout
            android:id="@+id/group_cb"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.2">
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.5dp"
            android:background="@color/accent_material_light"
            android:textColor="@color/secondary_text_default_material_dark"
            android:text="@string/restore"
            android:id="@+id/bt_restore" />

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accent_material_light"
            android:textColor="@color/secondary_text_default_material_dark"
            android:text="@string/cancel"
            android:id="@+id/bt_rscancel" />

    </LinearLayout>
</LinearLayout>